till mobile res correction

--- a/src/components/coursestrutureSection/coursestrutureSection.css
+++ b/src/components/coursestrutureSection/coursestrutureSection.css
@@ -12,7 +12,7 @@
     }
 
     .semester-content-part2 {
-        padding: 20px;
+        padding: 20px 0;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
     }
