--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 600px) {
   .faq-container {
     /* display: grid; */
-    padding: 30px;
+    padding: 30px 20px;
     /* grid-template-columns: 1fr 1.5fr; */
     gap: 30px;
     /* overflow: hidden; */
@@ -25,7 +25,7 @@
   .faq-question {
     font-weight: 600;
     font-size: 16px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
     display: flex;
     justify-content: space-between; /* pushes icon to the end */
     align-items: center;
@@ -67,7 +67,7 @@
   .faq-question {
     font-weight: 600;
     font-size: 16px;
-    padding-right: 5px;
+    /* padding-right: 5px; */
     display: flex;
     justify-content: space-between; /* pushes icon to the end */
     align-items: center;
