--- a/src/components/feedback/feedbacksection.css
+++ b/src/components/feedback/feedbacksection.css
@@ -644,7 +644,7 @@
   .feeback-headers {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .feedback-cards {
@@ -772,6 +772,7 @@
 
   .feedback-cards .slick-slider {
     width: 100% !important;
+    gap: 0;
   }
 }
 
@@ -871,12 +872,12 @@
 
   .next-button {
     left: 10%;
-    top: -8%;
+    top: -12%;
   }
 
   .prev-button {
-    top: -8%;
-    left: 2.5%;
+    top: -12%;
+    left: 0%;
   }
 
   .feedback-cards {
@@ -890,15 +891,17 @@
   .feedback-cards .slick-track {
     display: flex !important;
     background-color: #f3e8ea !important;
-    gap: 50px;
+    gap: 0px;
   }
 
   .feedback-cards .slick-slider {
     width: 100% !important;
+    gap: 0;
   }
   .next-and-pre-buttons-mobile{
     display: none;
   }
+  
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -1012,6 +1015,7 @@
 
   .feedback-cards .slick-slider {
     width: 100% !important;
+    gap: 0;
   }
 }
 
@@ -1030,6 +1034,10 @@
     padding-bottom: 5% !important;
   }
 
+  .feeback-headers {
+    justify-content: space-evenly;
+    align-items: start;
+  }
   .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
@@ -1098,13 +1106,13 @@
   }
 
   .next-button {
-    left: 7%;
-    top: -12%;
+    left: 9%;
+    top: -15%;
   }
 
   .prev-button {
-    top: -12%;
-    left: 2.5%;
+    top: -15%;
+    left: 2.8%;
   }
 
   .feedback-cards {
