--- a/src/components/floater/floater.css
+++ b/src/components/floater/floater.css
@@ -18,7 +18,7 @@
 .floater-wrapper {
   position: fixed;
   right: 20px;
-  bottom: 20px;
+  bottom: 50px;
   /* display: flex;
   flex-direction: column-reverse;  */
   align-items: center;
@@ -64,4 +64,11 @@
 
 .icon:hover {
   background-color: #f0f0f0;
+}
+
+@media screen and (min-width:600px) { 
+.floater-wrapper {
+  bottom: 20px;
+}
+
 }
