--- a/src/components/EnquireSection/enquireSection.css
+++ b/src/components/EnquireSection/enquireSection.css
@@ -387,7 +387,7 @@
 /* }  */
 
 /* @media screen and (min-width :992px) { */
-  /* .course-container {
+/* .course-container {
     padding: 40px 70px;
   }
 
@@ -401,8 +401,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr); */
-  /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
-  /* gap: 20px;
+/* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
+/* gap: 20px;
     column-gap: 32px;
     margin-top: 30px;
   }
@@ -423,16 +423,16 @@
   }
 
   .course-desc { */
-  /* color: #111111;
+/* color: #111111;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
     padding-bottom: 20px; */
-  /* display: flex;
+/* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center; */
-  /* padding: 15px;
+/* padding: 15px;
   }
 
   .course-title {
@@ -486,11 +486,11 @@
     align-items: center;
     justify-content: space-between;
     /* space between text and arrow */
-  /* gap: 12px; */
-  /* optional spacing */
-  /* cursor: pointer;
+/* gap: 12px; */
+/* optional spacing */
+/* cursor: pointer;
     margin-top: 20px; */
-  /* }
+/* }
 
   .search-button-text {
     padding-right: 6rem;
@@ -573,8 +573,7 @@
 
   } */
 
-
-  /* @media screen and (max-width :600px) {
+/* @media screen and (max-width :600px) {
     .main-fee-deatils {
       width: 90%;
       gap: 35px;
@@ -613,7 +612,7 @@
 
   .course-card {
     border-radius: 16px;
-    border: 1px solid #DBDBDB;
+    border: 1px solid #dbdbdb;
     overflow: hidden;
     padding: 16px;
   }
@@ -628,7 +627,6 @@
   }
 
   .course-desc {
-
     padding: 15px;
   }
 
@@ -639,13 +637,10 @@
     padding-bottom: 10px;
   }
 
-
   .enquire-heading {
     font-weight: 600;
     font-size: 14px;
   }
-
-
 
   .ant-card-body {
     border: 1px solid #000000 25%;
@@ -671,7 +666,6 @@
   }
 
   .sub-amount-deatils {
-
     /* flex: 1; */
     display: flex;
     flex-direction: column;
@@ -685,7 +679,6 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-
   }
 
   .black {
@@ -702,7 +695,6 @@
     width: 100%;
     gap: 4px;
     padding: 10px 0px;
-
   }
 
   .view-more {
@@ -715,8 +707,6 @@
     color: var(--primary-color) !important;
   }
 
-  
-
   .view-enquire-button {
     padding: 10px 0px;
     margin-top: 8px;
@@ -726,7 +716,6 @@
   }
 }
 @media only screen and (max-width: 600px) {
-
   .title-logo-main {
     width: 100%;
     display: flex;
@@ -741,12 +730,10 @@
     width: 100%;
     gap: 44px;
     padding: 10px 0px;
-    
-
   }
   .ant-card-body {
     border: 1px solid #000000 25%;
-    padding: 0px 0 !important;
+    padding: 0px 0;
     gap: 0;
   }
   .enquire-heading {
@@ -754,7 +741,6 @@
     font-weight: 600;
     line-height: 125%;
     padding-bottom: 10px;
-
   }
   .course-title {
     margin-left: 12px;
@@ -766,11 +752,10 @@
     display: flex;
   }
   .sub-amount-deatils {
-    
     display: flex;
     align-items: start;
     flex-direction: column;
-    justify-content: flex-start 
+    justify-content: flex-start;
   }
   .sub-amount-deatils > P {
     text-align: left;
@@ -780,7 +765,6 @@
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 992px) {
-
   .main-fee-deatils,
   .title-logo-main {
     display: flex;
@@ -790,7 +774,7 @@
 
   .ant-card-body {
     border: 1px solid #000000 25%;
-    padding: 0px 0 !important;
+    padding: 0px 0;
     gap: 0;
   }
   .sub-amount-deatils {
@@ -815,7 +799,6 @@
     font-weight: 600;
     line-height: 125%;
     padding-bottom: 10px;
-
   }
   .course-icon-image {
     width: 60px;
@@ -824,18 +807,15 @@
     width: 100%;
     gap: 34px;
     padding: 10px 0px;
-    
-
   }
   .view-enquire-button {
     display: flex;
   }
   .sub-amount-deatils {
-    
     display: flex;
     align-items: start;
     flex-direction: column;
-    justify-content: flex-start 
+    justify-content: flex-start;
   }
   .sub-amount-deatils > P {
     text-align: left;
@@ -844,12 +824,13 @@
     margin-left: 0;
   }
 }
-.view-enquire-button{ 
+.view-enquire-button {
   display: flex;
   justify-content: space-evenly;
 }
-.enq-button, .view-more {
-    width: 45%;
-    display: flex;
-    justify-content: center !important;
-  }
+.enq-button,
+.view-more {
+  width: 45%;
+  display: flex;
+  justify-content: center !important;
+}
