--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -10,11 +10,13 @@
   .mobile-topheading {
     padding-top: 15px;
   }
-  .card-container {
+  .course-containerr {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
+    overflow: visible;
+    position: relative;
   }
 
   .course-card {
@@ -39,7 +41,7 @@
     line-height: 150%;
     padding-bottom: 20px;
   }
-  .course-title {
+  .course-titlee {
     font-size: 24px;
     font-weight: 600;
     line-height: 125%;
@@ -155,6 +157,33 @@
   .search-wrapper {
     display: none;
   }
+  .slick-slide {
+    padding: 0 10px;
+  }
+
+  .previous-button,
+  .next-arrow-button {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    transform: translateY(-50%);
+    z-index: 10;
+    /* bottom: 20px; */
+  }
+
+  .previous-button {
+    left: -10px;
+  }
+
+  .next-arrow-button {
+    right: -10px;
+  }
+  .carousel-wrapper {
+    /* position: relative; */
+    padding: 0 10px; /* Give room for arrows */
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -169,11 +198,13 @@
   .mobile-topheading {
     padding-top: 15px;
   }
-  .card-container {
+  .course-containerr {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
+    overflow: visible;
+    position: relative;
   }
 
   .course-card {
@@ -198,7 +229,7 @@
     line-height: 150%;
     padding-bottom: 20px;
   }
-  .course-title {
+  .course-titlee {
     font-size: 24px;
     font-weight: 600;
     line-height: 125%;
@@ -228,7 +259,7 @@
     background-color: #841d26;
     object-fit: contain;
   }
-  .ant-card-body {
+  .course-card .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
     display: grid;
@@ -311,6 +342,32 @@
   .search-wrapper {
     display: none;
   }
+  .slick-slide {
+    padding: 0 10px;
+  }
+
+  .previous-button,
+  .next-arrow-button {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    transform: translateY(-50%);
+    z-index: 10;
+  }
+
+  .previous-button {
+    left: -10px;
+  }
+
+  .next-arrow-button {
+    right: -10px;
+  }
+  .carousel-wrapper {
+    /* position: relative; */
+    padding: 0 10px; /* Give room for arrows */
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -324,7 +381,7 @@
     justify-content: space-between;
     padding-bottom: 10px;
   }
-  .card-container {
+  .course-containerr {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -357,7 +414,7 @@
     line-height: 150%;
     padding-bottom: 20px;
   }
-  .course-title {
+  .course-titlee {
     font-size: 24px;
     font-weight: 600;
     line-height: 125%;
@@ -479,7 +536,7 @@
     justify-content: space-between;
     padding-bottom: 10px;
   }
-  .card-container {
+  .course-containerr {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -512,7 +569,7 @@
     line-height: 150%;
     padding-bottom: 20px;
   }
-  .course-title {
+  .course-titlee {
     font-size: 24px;
     font-weight: 600;
     line-height: 125%;
@@ -635,7 +692,7 @@
     padding-bottom: 10px;
     gap: 30px;
   }
-  .card-container {
+  .course-containerr {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -669,7 +726,7 @@
     margin-bottom: 20px;
     padding: 15px 0 !important;
   }
-  .course-title {
+  .course-titlee {
     font-size: 24px;
     font-weight: 600;
     line-height: 125%;
