--- a/src/components/feehoemsection/feehome.css
+++ b/src/components/feehoemsection/feehome.css
@@ -1,3 +1,4 @@
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .hero-slide {
@@ -287,6 +288,7 @@
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
   .hero-slide {
     width: 100%;
     height: 700px;
@@ -380,6 +382,9 @@
 }
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  element.style {
+  /* padding: 0px !important; */
+}
   .hero-slide {
     width: 100%;
     height: 700px;
