--- a/src/components/EnquireSection/enquireSection.css
+++ b/src/components/EnquireSection/enquireSection.css
@@ -588,6 +588,9 @@
   } */
 
 /* } */
+.slick-slide slick-active slick-current{
+  padding: 0;
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -764,7 +767,7 @@
     margin-left: 0;
   }
 }
-@media only screen and (min-width: 600px) and (max-width: 992px) {
+@media only screen and (min-width: 600px) {
   .main-fee-deatils,
   .title-logo-main {
     display: flex;
@@ -833,4 +836,76 @@
   width: 45%;
   display: flex;
   justify-content: center !important;
+}
+
+@media screen and (min-width :992px) {
+   .main-fee-deatils,
+  .title-logo-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .ant-card-body {
+    border: 1px solid #000000 25%;
+    padding: 0px 0;
+    gap: 0;
+  }
+  .sub-amount-deatils {
+    text-align: center;
+  }
+  .title-logo-main {
+    align-items: center;
+    padding: 10px;
+    gap: 12px;
+  }
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /* gap: 20px; */
+    column-gap: 32px;
+    margin-top: 30px;
+  }
+
+  .enquire-heading {
+    margin-left: 14px;
+    font-weight: 600;
+    line-height: 125%;
+    padding-bottom: 10px;
+  }
+  .course-icon-image {
+    width: 60px;
+  }
+  .main-fee-deatils {
+    width: 100%;
+    gap: 34px;
+    padding: 10px 0px;
+  }
+  .view-enquire-button {
+    display: flex;
+  }
+  .sub-amount-deatils {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .sub-amount-deatils > P {
+    text-align: left;
+  }
+  .enquire-heading {
+    margin-left: 0;
+  }
+}
+.view-enquire-button {
+  display: flex;
+  justify-content: space-evenly;
+}
+.enq-button,
+.view-more {
+  width: 45%;
+  display: flex;
+  justify-content: center !important;
+
 }
