--- a/src/components/EnquireSection/enquireSection.css
+++ b/src/components/EnquireSection/enquireSection.css
@@ -598,7 +598,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between !important;
+    /* justify-content: space-between !important; */
   }
   .main-fee-deatils {
     display: flex;
@@ -621,6 +621,8 @@
     padding-bottom: 10px;
   }
   .course-title {
+    font-size: 20px;
+    font-weight: 600;
     margin-left: 12px;
   }
   .course-icon-image {
@@ -657,6 +659,11 @@
   }
   .sub-amount-deatils {
     text-align: center;
+  }
+    .course-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 12px;
   }
   .title-logo-main {
     align-items: center;
@@ -785,55 +792,6 @@
 
 }
 
-@media only screen and (max-width: 600px) {
-  .title-logo-main {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between !important;
-  }
-  .main-fee-deatils {
-    display: flex;
-    flex: 1;
-  }
-  .main-fee-deatils {
-    width: 100%;
-    gap: 44px;
-    padding: 10px 0px;
-  }
-  .ant-card-body {
-    border: 1px solid #000000 25%;
-    padding: 0px 0;
-    gap: 0;
-  }
-  .enquire-heading {
-    margin-left: 14px;
-    font-weight: 600;
-    line-height: 125%;
-    padding-bottom: 10px;
-  }
-  .course-title {
-    margin-left: 12px;
-  }
-  .course-icon-image {
-    width: 60px;
-  }
-  .view-enquire-button {
-    display: flex;
-  }
-  .sub-amount-deatils {
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  .sub-amount-deatils > P {
-    text-align: left;
-  }
-  .enquire-heading {
-    margin-left: 0;
-  }
-}
 @media only screen and (min-width: 600px) and (max-width: 992px) {
   .main-fee-deatils,
   .title-logo-main {
@@ -972,7 +930,7 @@
   .title-logo-main {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
 
   .title-logo-main {
