--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -382,6 +382,7 @@
 
   .titleBar {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     padding-bottom: 10px;
   }
@@ -537,6 +538,7 @@
 
   .titleBar {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     padding-bottom: 10px;
   }
